# baseline_localizer

./: CMakeLists.txt  README.md  package.xml
config/: itri.rviz  itri.yaml  nuscenes.rviz  nuscenes.yaml
launch/: itri.launch  nuscenes.launch
src/: localizer_node.cpp  pub_map_node.cpp
