<?xml version="1.0"?>
<package format="2">
  <name>baseline_localizer</name>
  <version>0.0.0</version>
  <description>The baseline_localizer package</description>

  <maintainer email="bensonpuppy1997@gmail.com">biomotion</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf_conversions</depend>

  <export>

  </export>
</package>
